name:                counts
version:             0.1.0.0
homepage:            https://github.com/jhrcek/counts#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Hrček
maintainer:          honza.hrk@gmail.com
copyright:           2019 Jan Hrček
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable counts
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       arithmoi
